
Clones:
Addams Family, The L-5C (competition MOD)
Attack From Mars 1.1 (Pinball FX MOD)
Black Belt (Zaccaria) (Italian, German, and French Speech and corresponding Free Play variants)
Black Jack (Free Play+)
Champion Pub, The 1.6 (Pinball FX MOD)
Clash, The (unofficial MOD of Rock Encore)
Congo 1.1 with DCS-Sound rev. 1.0
Diner PA-0 (Prototype), LF-2 (French)
Dr. Dude LU-1 (Europe)
Eight Ball (Free Play+)
Eight Ball Deluxe (Player 2/4 Bonus Countdown Bugfix)
Elvira and the Party Monsters LF-1 (French)
Evel Knievel (Free Play+)
Freedom (Free Play+ rev. 07 and 20)
Gilligan's Island L-8
Heavy Metal Meltdown (German)
Jack*Bot 0.4A (Prototype)
Last Action Hero 1.06 (Canadian)
Mata Hari (Free Play+)
Medieval Madness 1.0 (Pinball FX MOD)
Metallica 1.80.0,1.80.0LE
Mousin' Around! LA-4C (competition MOD)
New Star's Phoenix (French Speech and corresponding Free Play variant)
Night Rider (Free Play+)
Party Zone F-4 (Pinball FX MOD)
Power Play (Free Play+)
Radical! L-1C (competition MOD)
Road Show L-6C (competition MOD)
Safe Cracker 1.8 (Pinball FX MOD)
Star Trek: The Next Generation LX-5
Star's Phoenix (French Speech and corresponding Free Play variant)
Star Wars 1.03 with Display A0.46
Strikes and Spares (Free Play+)
Tom & Jerry (unofficial MOD of Hollywood Heat)
Wheel of Fortune 6.02 (Home Rom)



Version 3.1 (July 29th, 2018) - "Flippin' fast"
------------------------------------------------------------------------------

*** CORE/CPU ***
Fix wrong gain/volume of voices/sound effects in Sound Mode 1 (i.e. builtin alternate sound file support)
Further improve M114 sound core (Mr. Game)
Add save credits support for Bow & Arrow
Fix neverending sounds on LTD system 4 games, added sound support for Cowboy Eight Ball and Zephy
Fix S.A.M. PulseSolState (needed for mech) and bug in Family Guy mini-playfield lights and move the (non-modulated) LED outputs in Tron LE that occupied columns 8 and 9 so far (i.e. disabling the start button lamps) to cols 11 and 12