@@ -46,6 +46,7 @@ Black Jack (Free Play+)
 Champion Pub, The 1.6 (Pinball FX MOD)
 Clash, The (unofficial MOD of Rock Encore)
 Congo 1.1 with DCS-Sound rev. 1.0
+Creature from the Black Lagoon L-4C (competition MOD) (replaces older Creature from the Black Lagoon L-5C (competition MOD))
 Diner PA-0 (Prototype), LF-2 (French)
 Dr. Dude LU-1 (Europe)
 Eight Ball (Free Play+)
@@ -67,11 +68,13 @@ Party Zone F-4 (Pinball FX MOD)
 Power Play (Free Play+)
 Radical! L-1C (competition MOD)
 Road Show L-6C (competition MOD)
+Rollergames L-2C (competition MOD)
 Safe Cracker 1.8 (Pinball FX MOD)
 Star Trek: The Next Generation LX-5
 Star's Phoenix (French Speech and corresponding Free Play variant)
 Star Wars 1.03 with Display A0.46
 Strikes and Spares (Free Play+)
+Theatre of Magic 1.3XC (competition MOD) (replaces older Theatre of Magic 1.5C (competition MOD))
 Tom & Jerry (unofficial MOD of Hollywood Heat)
 Wheel of Fortune 6.02 (Home Rom)
 
